[project]
name = "sports-program"
version = "0.1.0"
description = ""
authors = [
    {name = "leco",email = "lcosta.sp.br@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "fastapi (>=0.123.5,<0.124.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
